// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForbiddenView creates snapshot for card variant 1`] = `
<div
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-wlkygb-MuiPaper-root-MuiCard-root"
  style="--Paper-shadow: none;"
>
  <div
    class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-4z8dc3"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dj9u1r-MuiSvgIcon-root"
        data-testid="LockIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2m-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2m3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1s3.1 1.39 3.1 3.1z"
        />
      </svg>
      <div
        class="MuiStack-root css-6rg9iv-MuiStack-root"
      >
        <h1
          class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-13yvt6j-MuiTypography-root"
        >
          Acesso Negado
        </h1>
        <p
          class="MuiTypography-root MuiTypography-body1 css-gb4bb9-MuiTypography-root"
        >
          Você não tem permissão para acessar esta página ou realizar esta ação.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ForbiddenView creates snapshot for page variant 1`] = `
<div
  class="MuiBox-root css-57alq7"
>
  <svg
    aria-hidden="true"
    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dj9u1r-MuiSvgIcon-root"
    data-testid="LockIcon"
    focusable="false"
    viewBox="0 0 24 24"
  >
    <path
      d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2m-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2m3.1-9H8.9V6c0-1.71 1.39-3.1 3.1-3.1s3.1 1.39 3.1 3.1z"
    />
  </svg>
  <div
    class="MuiStack-root css-6rg9iv-MuiStack-root"
  >
    <h1
      class="MuiTypography-root MuiTypography-h3 MuiTypography-gutterBottom css-13yvt6j-MuiTypography-root"
    >
      Acesso Negado
    </h1>
    <p
      class="MuiTypography-root MuiTypography-body1 css-gb4bb9-MuiTypography-root"
    >
      Você não tem permissão para acessar esta página ou realizar esta ação.
    </p>
  </div>
</div>
`;
